--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "gulp-file-include": "^2.2.2",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
-    "gulp-uglify-es": "^2.0.0",
-    "node-sass": "^5.0.0"
+    "gulp-uglify-es": "^2.0.0"
   }
 }
