--- a/package.json
+++ b/package.json
@@ -42,8 +42,12 @@
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-file-include": "^2.2.2",
+    "gulp-imagemin": "^7.1.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-uglify-es": "^2.0.0"
+  },
+  "devDependencies": {
+    "gulp-debug": "^4.0.0"
   }
 }
